--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- U32196076 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,8 +18,11 @@
         <input type="date" id="startDate">
         <input type="date" id="endDate">
     </div>
-    <div id="chart"></div>
+    <div id="chart">
+        <svg width="600" height="600"></svg>
+    </div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
+
